--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps: 
 - name: "docker"
   args: ["build", "-t", "gcr.io/$PROJECT_ID/$REPO_NAME", "."]
-- images: 
-  - "gcr.io/$PROJECT_ID/$REPO_NAME"
+images: 
+- "gcr.io/$PROJECT_ID/$REPO_NAME"
     # name: "gcr.io/cloud-builders/docker"
     # args: ["push"]
