--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,11 @@
+substitutions:
+  _IMAGE_NAME: gcr.io/$PROJECT_ID/$REPO_NAME
 steps: 
 - name: "docker"
-  args: ["build", "-t", "gcr.io/$PROJECT_ID/$REPO_NAME", "."]
-images: 
-- "gcr.io/$PROJECT_ID/$REPO_NAME"
-    # name: "gcr.io/cloud-builders/docker"
-    # args: ["push"]
+  args: ["build", "-t", "${_IMAGE_NAME}", "."]
+ 
+- name: "gcr.io/cloud-builders/docker"
+  args: ["push", "${_IMAGE_NAME}"]
+
+- name: "gcr.io/cloud-builders/kubectl"
+  args: ["apply", "-f", "gke.yaml"]
